welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:4: error: not found: value x
    x=x+1
    ^Methods:7: error: not found: value x
forward(x)
        ^